8169373: Work around linux NPTL stack guard error

Also skip libc guard page for compiler thread, merge similar code on linux platforms, and streamline libc guard page handling on linuxs390, linuxppc, aixppc.

Reviewed-by: dholmes, dcubed, kvn